# src/routes/user-router.ts
@@ -1,4 +1,4 @@
-import { emailVerification, passwordRecovery, passwordRecoverySend, registration } from 'controllers'
+import { emailVerification, loginWithEmail, loginWithName, passwordRecovery, passwordRecoverySend, registration } from 'controllers'
 import express from 'express'
 
 const userRouter = express.Router()
@@ -7,5 +7,7 @@ userRouter.post('/register', registration)
 userRouter.post('/verify', emailVerification)
 userRouter.post('/password/send-link', passwordRecoverySend)
 userRouter.post('/password/recovery', passwordRecovery)
+userRouter.post('/login/name', loginWithName)
+userRouter.post('/login/email', loginWithEmail)
 
 export default userRouter
